data/all_generated_tests/raw_wast_tests/unreachable_MismanagementofBlockNesting_1231.wast
;; 2. **Test Description:** Using `unreachable` inside a loop followed by a `block` containing valid instructions. It ensures that the loop terminates correctly and does not incorrectly fall through to the outer block due to mismanagement of block depth.        **Constraint Checked:** Proper termination and trap handling within nested loops and blocks.

(assert_invalid
  (module (func $test_unreachable_in_loop_nested_block
    (block
      (loop
        (unreachable)
        (br 2)
      )
      (block (i32.const 1) (drop))
    )
  ))
  "type mismatch"
)